@@ -83,7 +83,7 @@ public class BootstrapModelResolver implements ModelResolver {
         this.versionRangeResolver = versionRangeResolver;
         this.remoteRepositoryManager = remoteRepositoryManager;
         this.repositories = repositories;
-        this.externalRepositories = Collections.unmodifiableList(new ArrayList<>(repositories));
+        this.externalRepositories = List.copyOf(repositories);
         this.repositoryIds = new HashSet<>();
     }
 
